GNOME Bugzilla – Bug 680053
playbin: Stutter after seeking MMS because buffering only starts after async-done
Last modified: 2018-05-04 11:57:01 UTC
Load up the media player stream on ZDF's Mediathek website, for example: http://www.zdf.de/ZDFmediathek/beitrag/video/1684774/MELT%2521-2012---Die-viereinhalb-Stunden?bc=sts;stt;kua1600896 After seeking, the player will stutter one frame before starting to buffer. It should buffer straight away.
Created attachment 219034 [details] [review] backend: Pause the backend when seeking And start playing back again when seeking has finished and not other seek events are scheduled to take place.
This patch doesn't actually solve the problem of a short frame (and associated sound) showing up in the display when the video is buffering after a seek. The link is simple enough that it's probably not obfuscated for now: http://wstreaming.zdf.de/zdf/veryhigh/120714_meltlive_fes.asx
Yep, the problem actually is that I receive the async-done message *before* receiving a message about the buffering. As I'm not buffering, I start playback, then receive a buffering message meaning I try to set the state to paused. There's a small gap between the 2 calls, and I end up playing a little bit of sound.
Created attachment 219142 [details] [review] backend: Pause the backend when seeking And start playing back again when seeking has finished and not other seek events are scheduled to take place.
Comment on attachment 219142 [details] [review] backend: Pause the backend when seeking Attachment 219142 [details] pushed as 73a2fb6 - backend: Pause the backend when seeking Still the problem of the buffering message coming after the async-done message left so reassigning to GStreamer.
Comment on attachment 219034 [details] [review] backend: Pause the backend when seeking Equivalent patch was committed: http://git.gnome.org/browse/totem/commit/src/backend/bacon-video-widget.c?id=73a2fb678079033ede4608db258503ff00a47943
Let's move to playbin for now. Haven't tried to reproduce it yet. Links above don't work for me, but I guess it will happen with other streams as well.
If anyone has a mms:// where you can reproduce it, please re-open. But MMS being a dead protocol, I expect this will never be fixed.