backend: Pause the backend when seeking

And start playing back again when seeking has finished and
not other seek events are scheduled to take place.

https://bugzilla.gnome.org/show_bug.cgi?id=680053